--- a/packages/amis-ui/scss/_components.scss
+++ b/packages/amis-ui/scss/_components.scss
@@ -1286,93 +1286,138 @@
   --Form-input-onFocused-borderColor: var(--colors-brand-5);
 
   // 勾选框
-  --checkbox-checkbox-default-height: var(--sizes-size-9);
-  --checkbox-checkbox-default-bg-color: var(--colors-neutral-fill-11);
-  --checkbox-checkbox-default-text-color: var(--colors-neutral-text-2);
-  --checkbox-checkbox-default-fontWeight: var(--fonts-weight-6);
-  --checkbox-checkbox-default-fontSize: var(--fonts-size-7);
-  --checkbox-checkbox-default-distance: var(--sizes-size-5);
+  --checkbox-default-default-height: var(--sizes-size-9);
+  --checkbox-default-default-bg-color: var(--colors-neutral-fill-11);
+  --checkbox-default-default-text-color: var(--colors-neutral-text-2);
+  --checkbox-default-default-fontWeight: var(--fonts-weight-6);
+  --checkbox-default-default-fontSize: var(--fonts-size-7);
+  --checkbox-default-default-distance: var(--sizes-size-5);
   @include borderColor(
-    --checkbox-checkbox-default,
+    --checkbox-default-default,
     var(--colors-neutral-line-8)
   );
-  @include borderWidth(--checkbox-checkbox-default, var(--borders-width-2));
-  @include borderStyle(--checkbox-checkbox-default, var(--borders-style-2));
-  @include borderRadius(--checkbox-checkbox-default, var(--sizes-size-2));
+  @include borderWidth(--checkbox-default-default, var(--borders-width-2));
+  @include borderStyle(--checkbox-default-default, var(--borders-style-2));
+  @include borderRadius(--checkbox-default-default, var(--borders-radius-2));
 
-  --checkbox-checkbox-hover-height: var(--sizes-size-9);
-  --checkbox-checkbox-hover-bg-color: var(--colors-neutral-fill-11);
-  --checkbox-checkbox-hover-text-color: var(--colors-neutral-text-2);
-  --checkbox-checkbox-hover-fontSize: var(--fonts-size-7);
-  @include borderColor(--checkbox-checkbox-hover, var(--colors-brand-5));
-  @include borderWidth(--checkbox-checkbox-hover, var(--borders-width-2));
-  @include borderStyle(--checkbox-checkbox-hover, var(--borders-style-2));
-  @include borderRadius(--checkbox-checkbox-hover, var(--sizes-size-2));
+  --checkbox-default-hover-height: var(--sizes-size-9);
+  --checkbox-default-hover-bg-color: var(--colors-neutral-fill-11);
+  --checkbox-default-hover-text-color: var(--colors-neutral-text-2);
+  --checkbox-default-hover-fontSize: var(--fonts-size-7);
+  @include borderColor(--checkbox-default-hover, var(--colors-brand-5));
+  @include borderWidth(--checkbox-default-hover, var(--borders-width-2));
+  @include borderStyle(--checkbox-default-hover, var(--borders-style-2));
+  @include borderRadius(--checkbox-default-hover, var(--borders-radius-2));
 
-  --checkbox-checkbox-active-height: var(--sizes-size-9);
-  --checkbox-checkbox-active-bg-color: var(--colors-neutral-fill-11);
-  --checkbox-checkbox-active-text-color: var(--colors-neutral-text-2);
-  --checkbox-checkbox-active-fontSize: var(--fonts-size-7);
-  @include borderColor(--checkbox-checkbox-active, var(--colors-brand-5));
-  @include borderWidth(--checkbox-checkbox-active, var(--borders-width-2));
-  @include borderStyle(--checkbox-checkbox-active, var(--borders-style-2));
-  @include borderRadius(--checkbox-checkbox-active, var(--sizes-size-2));
+  --checkbox-default-active-height: var(--sizes-size-9);
+  --checkbox-default-active-bg-color: var(--colors-neutral-fill-11);
+  --checkbox-default-active-text-color: var(--colors-neutral-text-2);
+  --checkbox-default-active-fontSize: var(--fonts-size-7);
+  @include borderColor(--checkbox-default-active, var(--colors-brand-5));
+  @include borderWidth(--checkbox-default-active, var(--borders-width-2));
+  @include borderStyle(--checkbox-default-active, var(--borders-style-2));
+  @include borderRadius(--checkbox-default-active, var(--borders-radius-2));
 
-  --checkbox-checkbox-disabled-height: var(--sizes-size-9);
-  --checkbox-checkbox-disabled-bg-color: var(--colors-neutral-fill-10);
-  --checkbox-checkbox-disabled-text-color: var(--colors-neutral-text-6);
-  --checkbox-checkbox-disabled-fontSize: var(--fonts-size-7);
+  --checkbox-default-disabled-height: var(--sizes-size-9);
+  --checkbox-default-disabled-bg-color: var(--colors-neutral-fill-10);
+  --checkbox-default-disabled-text-color: var(--colors-neutral-text-6);
+  --checkbox-default-disabled-fontSize: var(--fonts-size-7);
   @include borderColor(
-    --checkbox-checkbox-disabled,
+    --checkbox-default-disabled,
     var(--colors-neutral-line-8)
   );
-  @include borderWidth(--checkbox-checkbox-disabled, var(--borders-width-2));
-  @include borderStyle(--checkbox-checkbox-disabled, var(--borders-style-2));
-  @include borderRadius(--checkbox-checkbox-disabled, var(--sizes-size-2));
+  @include borderWidth(--checkbox-default-disabled, var(--borders-width-2));
+  @include borderStyle(--checkbox-default-disabled, var(--borders-style-2));
+  @include borderRadius(--checkbox-default-disabled, var(--borders-radius-2));
 
-  --checkbox-checked-default-height: var(--sizes-size-9);
-  --checkbox-checked-default-bg-color: var(--colors-brand-5);
-  --checkbox-checked-default-color: var(--colors-neutral-text-2);
-  --checkbox-checked-default-fontSize: var(--fonts-size-7);
-  --checkbox-checked-default-icon-size: var(--sizes-size-5);
-  @include borderColor(--checkbox-checked-default, var(--colors-brand-5));
-  @include borderWidth(--checkbox-checked-default, var(--borders-width-2));
-  @include borderStyle(--checkbox-checked-default, var(--borders-style-2));
-  @include borderRadius(--checkbox-checked-default, var(--sizes-size-2));
-
-  --checkbox-checked-hover-height: var(--sizes-size-9);
-  --checkbox-checked-hover-bg-color: var(--colors-brand-6);
-  --checkbox-checked-hover-color: var(--colors-neutral-text-2);
-  --checkbox-checked-hover-fontSize: var(--fonts-size-7);
-  @include borderColor(--checkbox-checked-hover, var(--colors-brand-6));
-  @include borderWidth(--checkbox-checked-hover, var(--borders-width-2));
-  @include borderStyle(--checkbox-checked-hover, var(--borders-style-2));
-  @include borderRadius(--checkbox-checked-hover, var(--sizes-size-2));
-
-  --checkbox-checked-active-height: var(--sizes-size-9);
-  --checkbox-checked-active-bg-color: var(--colors-brand-4);
-  --checkbox-checked-active-color: var(--colors-neutral-text-2);
-  --checkbox-checked-active-fontSize: var(--fonts-size-7);
-  @include borderColor(--checkbox-checked-active, var(--colors-brand-5));
-  @include borderWidth(--checkbox-checked-active, var(--borders-width-2));
-  @include borderStyle(--checkbox-checked-active, var(--borders-style-2));
-  @include borderRadius(--checkbox-checked-active, var(--sizes-size-2));
-
-  --checkbox-checked-disabled-height: var(--sizes-size-9);
-  --checkbox-checked-disabled-bg-color: var(--colors-neutral-fill-11);
-  --checkbox-checked-disabled-color: var(--colors-neutral-text-2);
-  --checkbox-checked-disabled-fontSize: var(--fonts-size-7);
+  --checkbox-default-checked-default-height: var(--sizes-size-9);
+  --checkbox-default-checked-default-bg-color: var(--colors-brand-5);
+  --checkbox-default-checked-default-text-color: var(--colors-neutral-text-2);
+  --checkbox-default-checked-default-fontSize: var(--fonts-size-7);
+  --checkbox-default-checked-default-icon-size: var(--sizes-size-8);
+  --checkbox-default-checked-default-icon-color: var(--colors-neutral-fill-11);
+  --checkbox-default-checked-default-icon: '<svg viewBox="0 0 1024 1024"><path d="M806.784 295.744l45.248 45.184-362.112 362.048-45.184 45.312-226.24-226.24 45.184-45.184 180.992 180.928z" fill="currentColor"></path></svg>';
   @include borderColor(
-    --checkbox-checked-disabled,
+    --checkbox-default-checked-default,
+    var(--colors-brand-5)
+  );
+  @include borderWidth(
+    --checkbox-default-checked-default,
+    var(--borders-width-2)
+  );
+  @include borderStyle(
+    --checkbox-default-checked-default,
+    var(--borders-style-2)
+  );
+  @include borderRadius(
+    --checkbox-default-checked-default,
+    var(--borders-radius-2)
+  );
+
+  --checkbox-default-checked-hover-height: var(--sizes-size-9);
+  --checkbox-default-checked-hover-bg-color: var(--colors-brand-6);
+  --checkbox-default-checked-hover-text-color: var(--colors-neutral-text-2);
+  --checkbox-default-checked-hover-fontSize: var(--fonts-size-7);
+  @include borderColor(--checkbox-default-checked-hover, var(--colors-brand-6));
+  @include borderWidth(
+    --checkbox-default-checked-hover,
+    var(--borders-width-2)
+  );
+  @include borderStyle(
+    --checkbox-default-checked-hover,
+    var(--borders-style-2)
+  );
+  @include borderRadius(
+    --checkbox-default-checked-hover,
+    var(--borders-radius-2)
+  );
+
+  --checkbox-default-checked-active-height: var(--sizes-size-9);
+  --checkbox-default-checked-active-bg-color: var(--colors-brand-4);
+  --checkbox-default-checked-active-text-color: var(--colors-neutral-text-2);
+  --checkbox-default-checked-active-fontSize: var(--fonts-size-7);
+  @include borderColor(
+    --checkbox-default-checked-active,
+    var(--colors-brand-5)
+  );
+  @include borderWidth(
+    --checkbox-default-checked-active,
+    var(--borders-width-2)
+  );
+  @include borderStyle(
+    --checkbox-default-checked-active,
+    var(--borders-style-2)
+  );
+  @include borderRadius(
+    --checkbox-default-checked-active,
+    var(--borders-radius-2)
+  );
+
+  --checkbox-default-checked-disabled-height: var(--sizes-size-9);
+  --checkbox-default-checked-disabled-bg-color: var(--colors-neutral-fill-10);
+  --checkbox-default-checked-disabled-text-color: var(--colors-neutral-text-6);
+  --checkbox-default-checked-disabled-fontSize: var(--fonts-size-7);
+  --checkbox-default-checked-disabled-icon-color: var(--colors-neutral-fill-6);
+  @include borderColor(
+    --checkbox-default-checked-disabled,
     var(--colors-neutral-line-8)
   );
-  @include borderWidth(--checkbox-checked-disabled, var(--borders-width-2));
-  @include borderStyle(--checkbox-checked-disabled, var(--borders-style-2));
-  @include borderRadius(--checkbox-checked-disabled, var(--sizes-size-2));
+  @include borderWidth(
+    --checkbox-default-checked-disabled,
+    var(--borders-width-2)
+  );
+  @include borderStyle(
+    --checkbox-default-checked-disabled,
+    var(--borders-style-2)
+  );
+  @include borderRadius(
+    --checkbox-default-checked-disabled,
+    var(--borders-radius-2)
+  );
 
   --checkbox-button-default-height: var(--sizes-base-16);
-  --checkbox-button-font-size: var(--fonts-size-7);
-  --checkbox-button-default-color: var(--colors-neutral-text-8);
+  --checkbox-button-default-fontSize: var(--fonts-size-7);
+  --checkbox-button-default-text-color: var(--colors-neutral-text-2);
   --checkbox-button-default-lineHeight: var(--fonts-lineHeight-2);
   @include padding(
     --checkbox-button-default,
@@ -1384,46 +1429,61 @@
   @include borderWidth(--checkbox-button-default, var(--borders-width-2));
   @include borderStyle(--checkbox-button-default, var(--borders-style-2));
 
-  --checkbox-button-hover-color: var(--colors-brand-5);
+  --checkbox-button-hover-text-color: var(--colors-brand-5);
   @include borderColor(--checkbox-button-hover, var(--colors-brand-5));
 
-  --checkbox-button-checked-color: var(--colors-brand-5);
-  --checkbox-button-checked-icon-color: var(--colors-brand-5);
-  --checkbox-button-checked-icon-i-color: var(--colors-neutral-fill-11);
-  @include borderColor(--checkbox-button-checked, var(--colors-brand-5));
+  --checkbox-button-checked-default-text-color: var(--colors-brand-5);
+  --checkbox-button-checked-default-icon-bg-size: var(--sizes-size-9);
+  --checkbox-button-checked-default-icon-bg-color: var(--colors-brand-5);
+  --checkbox-button-checked-default-icon-size: var(--sizes-size-8);
+  --checkbox-button-checked-default-icon-color: var(--colors-neutral-fill-11);
+  @include borderColor(
+    --checkbox-button-checked-default,
+    var(--colors-brand-5)
+  );
 
-  --checkbox-button-checked-hover-color: var(--colors-brand-6);
-  --checkbox-button-checked-hover-icon-color: var(--colors-brand-6);
+  --checkbox-button-checked-hover-text-color: var(--colors-brand-6);
+  --checkbox-button-checked-hover-icon-bg-size: var(--sizes-size-9);
+  --checkbox-button-checked-hover-icon-bg-color: var(--colors-brand-6);
+  --checkbox-button-checked-hover-icon-size: var(--sizes-size-8);
+  --checkbox-button-checked-hover-icon-color: var(--colors-neutral-fill-11);
   @include borderColor(--checkbox-button-checked-hover, var(--colors-brand-6));
 
-  --checkbox-button-checked-active-color: var(--colors-brand-4);
-  --checkbox-button-checked-active-icon-color: var(--colors-brand-4);
+  --checkbox-button-checked-active-text-color: var(--colors-brand-4);
+  --checkbox-button-checked-active-icon-bg-size: var(--sizes-size-9);
+  --checkbox-button-checked-active-icon-bg-color: var(--colors-brand-4);
+  --checkbox-button-checked-active-icon-size: var(--sizes-size-8);
+  --checkbox-button-checked-active-icon-color: var(--colors-neutral-fill-11);
   @include borderColor(--checkbox-button-checked-active, var(--colors-brand-4));
 
-  --checkbox-button-disabled-unchecked-color: var(--colors-neutral-text-6);
-  --checkbox-button-disabled-unchecked-bg-color: var(--colors-neutral-fill-10);
+  --checkbox-button-disabled-text-color: var(--colors-neutral-text-6);
+  --checkbox-button-disabled-bg-color: var(--colors-neutral-fill-10);
   @include borderColor(
-    --checkbox-button-disabled-unchecked,
+    --checkbox-button-disabled,
     var(--colors-neutral-line-8)
   );
 
-  --checkbox-button-disabled-checked-color: var(--colors-neutral-text-6);
-  --checkbox-button-disabled-checked-bg-color: var(--colors-neutral-fill-10);
-  --checkbox-button-disabled-checked-icon-color: var(--colors-neutral-text-6);
-  @include borderColor(
-    --checkbox-button-disabled-checked,
-    var(--colors-neutral-line-8)
+  --checkbox-button-checked-disabled-text-color: var(--colors-neutral-text-5);
+  --checkbox-button-checked-disabled-bg-color: var(--colors-neutral-fill-8);
+  --checkbox-button-checked-disabled-icon-bg-size: var(--sizes-size-9);
+  --checkbox-button-checked-disabled-icon-bg-color: var(
+    --colors-neutral-fill-6
   );
+  --checkbox-button-checked-disabled-icon-size: var(--sizes-size-8);
+  --checkbox-button-checked-disabled-icon-color: var(--colors-neutral-fill-11);
+  @include borderColor(
+    --checkbox-button-checked-disabled,
+    var(--colors-neutral-line-7)
+  );
+
+  --checkbox-default-sm-size: var(--sizes-size-8);
+  --checkbox-default-sm-icon-size: var(--sizes-size-7);
+
+  --checkbox-default-partial-default-icon: '<svg viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" ><path d="M164.571429 424.96m87.04 0l520.777142 0q87.04 0 87.04 87.04l0 0q0 87.04-87.04 87.04l-520.777142 0q-87.04 0-87.04-87.04l0 0q0-87.04 87.04-87.04Z" fill="currentColor"></path></svg>';
 
   --Checkbox-onHover-color: var(--checkbox-checked-default-bg-color);
-  --button-primary-hover-bg-color: var(--checkbox-checked-hover-bg-color);
-  --Checkbox-checked-onHover-bgColor: var(--checkbox-checked-active-bg-color);
   --Checkbox-onDisabled-bg: var(--colors-neutral-fill-10);
   --Checkbox-size: var(--checkbox-checkbox-default-height);
-  --Checkbox--full-inner-size: var(--sizes-size-5);
-  --Checkbox--sm--full-inner-size: var(--sizes-size-5);
-  --Checkbox--sm-inner-size: var(--sizes-size-5);
-  --Checkbox--sm-size: var(--sizes-size-8);
   --Checkbox-borderRadius: #{px2rem(2px)};
   --Checkbox-color: var(--borderColor);
   --Checkbox-gap: var(--gap-xs);
@@ -1837,7 +1897,7 @@
   --Rating-text-lineHeight: var(--fonts-lineHeight-2);
   --Rating-inactive-color: var(--colors-neutral-text-9);
 
-  --radio-default-default-color: var(--colors-neutral-text-8);
+  --radio-default-default-border-color: var(--colors-neutral-text-8);
   --radio-default-default-text-color: var(--colors-neutral-text-1);
   --radio-default-default-bg-color: var(--colors-neutral-fill-11);
   --radio-default-default-fontSize: var(--fonts-size-7);
@@ -1853,18 +1913,21 @@
     var(--sizes-size-0)
   );
 
-  --radio-default-hover-color: var(--colors-brand-5);
   --radio-default-hover-text-color: var(--colors-neutral-text-1);
   --radio-default-hover-bg-color: var(--colors-neutral-fill-11);
+  --radio-default-hover-border-color: var(--colors-brand-5);
 
-  --radio-default-checked-point-inner-size: var(--sizes-size-5);
-  --radio-default-checked-color: var(--colors-brand-5);
+  --radio-default-checked-icon-size: var(--sizes-size-5);
+  --radio-default-checked-icon-color: var(--colors-brand-5);
+  --radio-default-checked-icon: '<svg viewBox="0 0 1024 1024"><path d="M512 512m-512 0a512 512 0 1 0 1024 0 512 512 0 1 0-1024 0Z" fill="currentColor"></path></svg>';
   --radio-default-checked-text-color: var(--colors-neutral-text-1);
   --radio-default-checked-bg-color: var(--colors-neutral-fill-11);
+  --radio-default-checked-border-color: var(--colors-brand-5);
 
-  --radio-default-disabled-color: var(--colors-neutral-text-6);
+  --radio-default-disabled-border-color: var(--colors-neutral-line-8);
+  --radio-default-disabled-icon-color: var(--colors-neutral-fill-7);
   --radio-default-disabled-text-color: var(--colors-neutral-text-6);
-  --radio-default-disabled-bg-color: var(--colors-neutral-fill-8);
+  --radio-default-disabled-bg-color: var(--colors-neutral-fill-10);
 
   @include margin(
     --radio-default-vertical,
@@ -1875,8 +1938,8 @@
   );
 
   --radio-button-default-height: var(--sizes-base-16);
-  --radio-button-font-size: var(--fonts-size-7);
-  --radio-button-default-color: var(--colors-neutral-text-8);
+  --radio-button-default-fontSize: var(--fonts-size-7);
+  --radio-button-default-text-color: var(--colors-neutral-text-1);
   --radio-button-default-lineHeight: var(--fonts-lineHeight-2);
   @include padding(
     --radio-button-default,
@@ -1888,21 +1951,21 @@
   @include borderWidth(--radio-button-default, var(--borders-width-2));
   @include borderStyle(--radio-button-default, var(--borders-style-2));
 
-  --radio-button-hover-color: var(--colors-brand-5);
+  --radio-button-hover-text-color: var(--colors-brand-5);
   @include borderColor(--radio-button-hover, var(--colors-brand-5));
 
-  --radio-button-checked-color: var(--colors-neutral-text-11);
+  --radio-button-checked-text-color: var(--colors-neutral-text-11);
   --radio-button-checked-bg-color: var(--colors-brand-5);
   @include borderColor(--radio-button-checked, var(--colors-brand-5));
 
-  --radio-button-disabled-unchecked-color: var(--colors-neutral-text-6);
+  --radio-button-disabled-unchecked-text-color: var(--colors-neutral-text-6);
   --radio-button-disabled-unchecked-bg-color: var(--colors-neutral-fill-10);
   @include borderColor(
     --radio-button-disabled-unchecked,
     var(--colors-neutral-line-8)
   );
 
-  --radio-button-disabled-checked-color: var(--colors-neutral-text-5);
+  --radio-button-disabled-checked-text-color: var(--colors-neutral-text-5);
   --radio-button-disabled-checked-bg-color: var(--colors-neutral-fill-8);
   @include borderColor(
     --radio-button-disabled-checked,
