feat: 全局事件动作事件配置面板

--- a/packages/amis-editor-core/scss/control/_event-action.scss
+++ b/packages/amis-editor-core/scss/control/_event-action.scss
@@ -206,6 +206,9 @@
       clip-path: inset(-5px 0px 0px 0px);
     }
   }
+  &-content-withglobalevent {
+    margin-top: 100px !important;
+  }
   .no-bd-btm {
     border-bottom: none;
   }
