feat: 表格列新增textOverflow属性

--- a/packages/amis-ui/scss/components/_table.scss
+++ b/packages/amis-ui/scss/components/_table.scss
@@ -13,6 +13,11 @@
     margin-bottom: var(--gap-sm);
   }
 
+  .#{$ns}TableCell-ellipsis {
+    display: flex;
+    align-items: center;
+  }
+
   &-fixedTop {
     position: sticky;
     top: var(--affix-offset-top);
