fix:动作调用列表样式优化

--- a/packages/amis-editor-core/scss/control/_event-action.scss
+++ b/packages/amis-editor-core/scss/control/_event-action.scss
@@ -512,4 +512,9 @@
   width: 255px;
   max-height: 360px;
   overflow: auto;
+  .variables-select-panel-tree {
+    *:not(svg) {
+      font-size: 12px;
+    }
+  }
 }
