feat: 列表选取新增选项可删除图标控制，配置面板调整

--- a/packages/amis-ui/scss/components/form/_picker.scss
+++ b/packages/amis-ui/scss/components/form/_picker.scss
@@ -97,6 +97,10 @@
 
   .#{$ns}Picker-values {
     display: inline;
+
+    .#{$ns}Picker-valueLabel {
+      pointer-events: auto;
+    }
   }
 
   &-valueWrap {
