feat: 图形组件支持配置宽高、颜色

--- a/packages/amis-ui/scss/components/_shape.scss
+++ b/packages/amis-ui/scss/components/_shape.scss
@@ -6,7 +6,13 @@
  */
 
 .#{$ns}Shape {
+  position: relative;
   display: inline-flex;
   align-items: center;
   justify-content: center;
+  width: 200px;
+  height: 200px;
+  &-svg {
+    position: absolute;
+  }
 }
