--- a/packages/amis-ui/scss/components/_table.scss
+++ b/packages/amis-ui/scss/components/_table.scss
@@ -1020,7 +1020,10 @@
     > .#{$ns}Table-contentWrap {
       > .#{$ns}Table-content > table {
         border-top: none; // 不然会导致拖动时顶部露出内容
-        min-height: 100%; // 为了让表格占满高度
+
+        &.#{$ns}Table-table--tableFillHeight {
+          min-height: 100%; // 为了让表格占满高度
+        }
       }
 
       > .#{$ns}Table-content table thead {
