--- a/packages/amis-ui/scss/components/_carousel.scss
+++ b/packages/amis-ui/scss/components/_carousel.scss
@@ -202,4 +202,65 @@
     z-index: 100;
     text-align: center;
   }
+
+  &-vertical.#{$ns}Carousel {
+    .#{$ns}Carousel-dotsControl {
+      right: 0;
+      bottom: auto;
+      height: 100%;
+      width: auto;
+      display: flex;
+      flex-direction: column;
+      top: 0;
+      justify-content: center;
+    }
+    .#{$ns}Carousel-leftArrow, .#{$ns}Carousel-rightArrow {
+      height: 10%;
+      width: 100%;
+      left: 0;
+      right: 0;
+      bottom: unset;
+    }
+    .#{$ns}Carousel-leftArrow {
+      top: 0;
+      svg {
+        transform: translate(-50%, -50%) rotate(90deg);
+      }
+    }
+    .#{$ns}Carousel-rightArrow {
+      bottom: 0;
+      top: unset;
+      svg {
+        transform: translate(-50%, -50%) rotate(90deg);
+      }
+    }
+
+    .#{$ns}Carousel-item.slide {
+      transform: translateY(100%);
+    }
+
+    .#{$ns}Carousel-item.slide.in {
+      transform: translateY(0);
+    }
+
+    .#{$ns}Carousel-item.slide.out {
+      transform: translateY(-100%);
+    }
+
+    .#{$ns}Carousel-item.slideRight {
+      transform: translateY(-100%);
+    }
+
+    .#{$ns}Carousel-item.slideRight.in {
+      transform: translateY(0);
+    }
+
+    .#{$ns}Carousel-item.slideRight.out {
+      transform: translateY(100%);
+    }
+  }
+
+  img {
+    pointer-events: none;
+  }
 }
