fix: 修复picker溢出隐藏样式错乱

--- a/packages/amis-ui/scss/_mixins.scss
+++ b/packages/amis-ui/scss/_mixins.scss
@@ -714,6 +714,9 @@
 
   .#{$ns}#{$component-prefix}-valueLabel {
     padding: 0 var(--gap-xs);
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
   }
 }
 
