style: 优化select下checkbox样式

--- a/packages/amis-ui/scss/components/form/_select.scss
+++ b/packages/amis-ui/scss/components/form/_select.scss
@@ -370,6 +370,7 @@
       text-overflow: ellipsis;
       overflow: hidden;
       white-space: nowrap;
+      margin: 0;
       > i {
         flex-shrink: 0;
       }
