--- a/packages/amis-ui/scss/components/_lottery.scss
+++ b/packages/amis-ui/scss/components/_lottery.scss
@@ -1,3 +1,9 @@
+
+@use 'sass:color';
+@import 'node_modules/amis-ui/scss/mixins';
+@import 'node_modules/amis-ui/scss/functions';
+@import 'node_modules/amis-ui/scss/variables';
+
 @keyframes switch-light {
   from {
     background-image: url("../../../../examples/static/light.png");
@@ -9,7 +15,7 @@
 
 .#{$ns}Lottery {
   position: relative;
-  padding: 0.2rem;
+  padding: px2rem(10px);
   box-sizing: content-box;
   background-color: #fdd130;
   background-size: 100% 100%;
@@ -23,7 +29,7 @@
     align-content: space-around;
     position: absolute;
     background: #ffa00a;
-    padding: 0.2rem;
+    padding: px2rem(5px);
     left: 0;
     right: 0;
     top: 0;
@@ -33,7 +39,7 @@
     height: 90%;
     flex-wrap: wrap;
     -webkit-flex-wrap: wrap;
-    border-radius: 0.1rem;
+    border-radius: px2rem(15px);
     overflow: hidden;
     background-size: 100% 100%;
     transition: all .05s ease;
@@ -47,8 +53,8 @@
     }
 
     .luckNineItem {
-      border-radius: 1rem;
-      padding: 0.2rem;
+      border-radius: px2rem(10px);
+      padding: px2rem(5px);
       background-image: linear-gradient(#ffefd1, #ffc8a4);
       display: flex;
       flex-direction: column;
@@ -59,14 +65,14 @@
       transition: all .05s ease;
 
       .luckNineItem-title {
-        margin-top: 0.1rem;
-        font-size: 0.6rem;
+        margin-top: px2rem(5px);
+        font-size: px2rem(10px);
         font-weight: bold;
         white-space: nowrap;
         text-overflow: ellipsis;
         overflow: hidden;
-        width: 4rem;
-        height: 1rem;
+        width: px2rem(60px);
+        height: px2rem(15px);
         text-align: center;
         color: #be602b;
       }
@@ -81,7 +87,7 @@
       cursor: pointer;
       background-image: linear-gradient(#ff733e, #ff4e57);
       color: rgba(255, 212, 167, 1);
-      font-size: 1.8rem;
+      font-size: px2rem(30px);
       font-weight: bold;
       transition: all 1s ease-in;
     }
