feat: 新增 dropdown-contextmenus 组件

--- a/packages/amis-ui/scss/components/_context-menu.scss
+++ b/packages/amis-ui/scss/components/_context-menu.scss
@@ -127,6 +127,12 @@
     &.has-child:hover > a::after {
       border-color: transparent transparent transparent var(--menu-active-color);
     }
+
+    &.is-danger {
+      > a {
+        color: var(--danger-color);
+      }
+    }
   }
 
   &-itemIcon {
