--- a/packages/amis-ui/scss/themes/_common.scss
+++ b/packages/amis-ui/scss/themes/_common.scss
@@ -17,6 +17,7 @@
 @import '../components/badge';
 @import '../components/modal';
 @import '../components/drawer';
+@import '../components/dropdown-context-menus';
 @import '../components/tooltip';
 @import '../components/tpl';
 @import '../components/popover';
