修复图片高度塌陷问题

--- a/packages/amis-ui/scss/components/_images.scss
+++ b/packages/amis-ui/scss/components/_images.scss
@@ -16,6 +16,13 @@
 .#{$ns}Image {
   border: var(--borderWidth) solid var(--borderColor);
 
+  &--original {
+    height: 100%;
+    .#{$ns}Image-origin--cover {
+      height: 100%;
+    }
+  }
+
   &--thumb {
     display: inline-block;
     padding: var(--image-image-normal-paddingTop)
