style: 优化图片组件样式

--- a/packages/amis-ui/scss/components/_images.scss
+++ b/packages/amis-ui/scss/components/_images.scss
@@ -15,6 +15,7 @@
 
 .#{$ns}Image {
   border: var(--borderWidth) solid var(--borderColor);
+  overflow: hidden;
 
   &--original {
     height: 100%;
