--- a/packages/amis-ui/scss/components/_pagination.scss
+++ b/packages/amis-ui/scss/components/_pagination.scss
@@ -67,7 +67,7 @@
   }
 
   &-simple {
-    color: #666666;
+    color: var(--Pagination-light-color);
     > ul > li {
       &:hover,
       &:focus {
@@ -351,7 +351,7 @@
       > li {
         > a,
         > span {
-          border: var(--borderWidth) solid var(--borderColor);
+          border: var(--Pagination-border);
         }
         &.disabled {
           > a,
