--- a/packages/amis-ui/scss/components/_carousel.scss
+++ b/packages/amis-ui/scss/components/_carousel.scss
@@ -63,6 +63,7 @@
     width: 100%;
     height: 100%;
     overflow: hidden;
+    touch-action: pan-y pinch-zoom;
 
     .#{$ns}Carousel-item {
       width: 100%;
@@ -127,6 +128,62 @@
         height: 100%;
         background-size: cover;
       }
+
+      .#{$ns}Video {
+        height: 100%;
+        position: relative;
+        z-index: 2;
+
+        .#{$ns}Video-player {
+          height: 100%;
+
+          .video-react {
+            height: 100% !important;
+            padding-top: 0 !important;
+            background-color: var(--Carousel-bg) !important;
+
+            .video-react-control-bar {
+              z-index: 4;
+              pointer-events: auto;
+              touch-action: auto !important;
+
+              * {
+                pointer-events: auto;
+                touch-action: auto !important;
+              }
+
+              .video-react-progress-control,
+              .video-react-volume-menu-button {
+                pointer-events: auto;
+                touch-action: auto !important;
+
+                .video-react-slider,
+                .video-react-menu,
+                .video-react-volume-bar {
+                  pointer-events: auto;
+                  touch-action: auto !important;
+                }
+              }
+            }
+
+            .video-react-poster {
+              background-color: var(--Carousel-bg) !important;
+            }
+
+            .video-react-video {
+              position: absolute;
+              top: 50%;
+              left: 50%;
+              transform: translate(-50%, -50%);
+              width: 100%;
+              height: 100%;
+              object-fit: contain;
+              pointer-events: auto;
+              touch-action: auto !important;
+            }
+          }
+        }
+      }
     }
   }
 
@@ -144,8 +201,9 @@
     position: absolute;
     bottom: 0px;
     width: 100%;
-    z-index: 100;
+    z-index: 3;
     text-align: center;
+    pointer-events: none;
 
     .#{$ns}Carousel-dot {
       cursor: pointer;
@@ -156,10 +214,21 @@
       margin: var(--Carousel-dot-margin);
       transition-duration: var(--Carousel-transitionDuration);
       opacity: 0.3;
+      pointer-events: auto;
 
       &.is-active {
         opacity: 1;
       }
+    }
+  }
+
+  .#{$ns}Carousel-leftArrow,
+  .#{$ns}Carousel-rightArrow {
+    z-index: 3;
+    pointer-events: none;
+
+    .icon {
+      pointer-events: auto;
     }
   }
 
@@ -215,8 +284,9 @@
         top: 0;
         justify-content: center;
       }
-      
-      &-leftArrow, &-rightArrow {
+
+      &-leftArrow,
+      &-rightArrow {
         height: 10%;
         width: 100%;
         left: 0;
@@ -238,27 +308,27 @@
           transform: translate(-50%, -50%) rotate(90deg);
         }
       }
-  
+
       &-item.slide {
         transform: translateY(100%);
       }
-  
+
       &-item.slide.in {
         transform: translateY(0);
       }
-  
+
       &-item.slide.out {
         transform: translateY(-100%);
       }
-  
+
       &-item.slideRight {
         transform: translateY(-100%);
       }
-  
+
       &-item.slideRight.in {
         transform: translateY(0);
       }
-  
+
       &-item.slideRight.out {
         transform: translateY(100%);
       }
