--- a/packages/amis-ui/scss/themes/_common.scss
+++ b/packages/amis-ui/scss/themes/_common.scss
@@ -5,6 +5,7 @@
 @import '../base/normalize';
 @import '../base/typography';
 @import '../base/common';
+@import '../base/animate';
 
 @import '../layout/layout';
 @import '../layout/grid';
