--- a/packages/amis-ui/scss/components/_context-menu.scss
+++ b/packages/amis-ui/scss/components/_context-menu.scss
@@ -61,6 +61,7 @@
 
     background: var(--menu-background);
     box-shadow: var(--menu-box-shadow);
+    border-radius: var(--menu-border-radius);
 
     color: var(--menu-font-color);
     font-family: var(--menu-font-family);
