feat: 新增滑动条组件

--- a/packages/amis-ui/scss/themes/_common.scss
+++ b/packages/amis-ui/scss/themes/_common.scss
@@ -84,6 +84,7 @@
 @import '../components/portlet';
 @import '../components/grid-nav';
 @import '../components/shape';
+@import '../components/slider';
 
 @import '../components/form/fieldset';
 @import '../components/form/group';
